test/files/invalid/escape_sequence.fbs
table Foo {
  x: string = "\xjj";
}