test/files/invalid/escape_sequence.stderr
[0m[1m[38;5;9merror[0m[1m: Invalid escape sequence[0m
  [0m[34m┌─[0m test/files/invalid/escape_sequence.fbs:2:16
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m   x: string = "[0m[31m\x[0mjj";
  [0m[34m│[0m                [0m[31m^^[0m

Error: Bailing because of errors
